Makes some housekeeping adjustments - Adds a border around the social links - Adds `<title>` element to head - Updates the hero image size and fetch priority for LCP - Darkens the primary color for correct contrast

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -16,7 +16,7 @@
   --color-background: hsl(45 40% 97%);
   --color-foreground: hsl(250 30% 20%);
 
-  --color-primary: hsl(260 60% 65%);
+  --color-primary: hsl(260, 36%, 53%);
   --color-primary-foreground: hsl(0 0% 100%);
 
   --color-secondary: hsl(165 50% 88%);
